# rust-string-stupidify

./: Cargo.toml  README.md
src/: decorator.rs  decorators.rs  lib.rs
tests/: stupidify_string.rs
