[package]
name = "string_stupidify"
description = "Collection of helper functions to format strings in unusual ways"
version = "0.1.4"
authors = ["Stephan Goeppentin <dedda102@gmail.com>"]
edition = "2018"
license = "LGPL-3.0"
repository = "https://github.com/Dedda/rust-string-stupidify"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
rand = "0.6.5"